# OxiPaste

./: Cargo.toml
nix/: default.nix
src/ui/: context.rs  custom_rich.rs  main.rs
