[package]
name = "oxipaste"
version = "0.2.0"
edition = "2024"
description = "clipboard manager written in Rust/Iced"
license = "GPL-3.0-or-later"

[[bin]]
name = "oxipaste_daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "oxipaste_command_runner"
path = "src/command_runner/main.rs"

[[bin]]
name = "oxipaste"
path = "src/ui/main.rs"

[dependencies]
arboard = "3.5.0"
oxiced = { git = "https://github.com/Xetibo/oxiced", branch = "iced14" }
iced = { version = "0.14.0-dev", features = [
	"advanced",
	"canvas",
	"image",
	"svg",
	"tokio",
], git = "https://github.com/iced-rs/iced" }
iced_layershell = { version = "0.14.0-dev", git = "https://github.com/waycrate/exwlshelleventloop" }
indexmap = "2.10.0"
once_cell = "1.21.3"
oxilib = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tokio-macros = "2.5.0"
toml = "0.9.5"
wayland-client = "0.31.11"
wayland-protocols-wlr = "0.3.9"
wl-clipboard-rs = "0.9.2"
xdg = "3.0.0"
zbus = "5.9.0"
